<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/episode_download"
        android:title="@string/download" />
    <item
        android:id="@+id/episode_status"
        android:title="@string/update_status"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/episode_cast"
        android:title="@string/cast"
        tools:icon="@drawable/mr_button_light" />
    <item
        android:id="@+id/episode_erase"
        android:title="@string/erase"
        tools:icon="@drawable/ic_baseline_delete"
        android:visible="false"/>
<!--        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"-->
</menu>